add Docker, unitTests, Open-Api,debug